src/test/deca/context/valid/return/return_from_expression_with_fields.deca
// Description :
// Return d’une expression utilisant des champs
//
// Resultats :
// ok

class A {
    int x = 2;
    int y = 3;
    int f() { return x + y * 2; }
}
